--- a/index.html
+++ b/index.html
@@ -99,91 +99,14 @@
         <i class="fa-solid fa-xmark icon-close-cart"></i>
         </div>
         <div class="cart-container">
-        <div class="cart-item box">
-            <div class="item-img">
-            <img src="./assets/img/products/burguer-americano.jpg" />
-            </div>
-            <div class="item-info">
-            <div class="item-info-text">
-                <h3 class="item-title">Sandwich de Pollo Frito "Crocken"</h3>
-                <span class="item-description">+ Papas Fritas (sin cargo)</span>
-                <span class="item-price">$1509</span>
-            </div>
-            <div class="item-handler">
-                <a class="item-edit"><i class="fa-solid fa-pen-to-square"></i></a>
-                <span class="quantity-handler down">-</span>
-                <span class="item-quantity">1</span>
-                <span class="quantity-handler up">+</span>
-                <a class="item-trash"><i class="fa-solid fa-trash-can"></i></a>
-            </div>
-            </div>
-        </div>
-        <div class="cart-item box">
-            <div class="item-img">
-            <img src="./assets/img/products/crunchy-wrap.jpg" />
-            </div>
-            <div class="item-info">
-            <div class="item-info-text">
-                <h3 class="item-title">Crunchy Wrap</h3>
-                <span class="item-description">+ Chips de Vegetales ($99)</span>
-                <span class="item-price">$1509</span>
-            </div>
-            <div class="item-handler">
-                <a class="item-edit"><i class="fa-solid fa-pen-to-square"></i></a>
-                <span class="quantity-handler down">-</span>
-                <span class="item-quantity">1</span>
-                <span class="quantity-handler up">+</span>
-                <a class="item-trash"><i class="fa-solid fa-trash-can"></i></a>
-            </div>
-            </div>
-        </div>
-        <div class="cart-item box">
-            <div class="item-img">
-            <img src="./assets/img/products/combo-10alitas-crunch.jpg" />
-            </div>
-            <div class="item-info">
-            <div class="item-info-text">
-                <h3 class="item-title">Combo de 10 Alitas Crunch</h3>
-                <span class="item-description">+ Papas con Cheddar ($469)</span>
-                <span class="item-price">$1509</span>
-            </div>
-            <div class="item-handler">
-                <a class="item-edit"><i class="fa-solid fa-pen-to-square"></i></a>
-                <span class="quantity-handler down">-</span>
-                <span class="item-quantity">1</span>
-                <span class="quantity-handler up">+</span>
-                <a class="item-trash"><i class="fa-solid fa-trash-can"></i></a>
-            </div>
-            </div>
-        </div>
-        <div class="cart-item box">
-            <div class="item-img">
-            <img src="./assets/img/products/pops-crocken-p-compartir.jpg" />
-            </div>
-            <div class="item-info">
-            <div class="item-info-text">
-                <h3 class="item-title">Pop's Crocken</h3>
-                <span class="item-description">1x Papas con Cheddar ($469)</span>
-                <span class="item-description">3x Papas Fritas (Sin Cargo)</span>
-                <span class="item-price">$1509</span>
-            </div>
-            <div class="item-handler">
-                <a class="item-edit"><i class="fa-solid fa-pen-to-square"></i></a>
-                <span class="quantity-handler down">-</span>
-                <span class="item-quantity">4</span>
-                <span class="quantity-handler up">+</span>
-                <a class="item-trash"><i class="fa-solid fa-trash-can"></i></a>
-            </div>
-            </div>
-        </div>
         </div>
         <span class="divider"></span>
         <div class="cart-total">
         <div class="total-price">
             <h4>Total:</h4>
-            <span id="total-cart">$4512</span>
+            <span id="total-cart"></span>
         </div>
-        <a class="btn btn-orange" href="">Comprar</a>
+        <a class="btn btn-orange btn-buy" href="#">Comprar</a>
         </div>
     </div>
     <div class="navbar-responsive">
@@ -228,72 +151,34 @@
         </div>
         </section>
         <section id="products">
-        <h2 class="title-section box">¡Podes elegir y pedir ahora mismo!</h2>
-        <p class="title-description box">El mejor pollo frito que habrás probado en tu vida. Crocante y tierno a la vez, sabroso pero liviano. Nuestra receta secreta es la clave.</p>
-        <div class="splide splide-products box">
-            <div class="splide__track">
-            <ul class="splide__list" id="products-container"></ul>
+            <div class="title-section white">
+                <h2 class="title-section box">categorías</h2>
             </div>
-        </div>
-        </section>
-        <section id="categories">
-        <h2 class="box">categorias</h2>
-        <p class="title-description box">Elegí el producto que desees de nuestra amplia variedad.</p>
-            <div class="categories">
-                <div class="box categories-category">
-                    <img
-                        src="./assets/img/products/combo-5alitas-crunch.jpg"
-                        alt=""
-                        srcset=""
-                    />
-                    <h4 class="category-title">Combos Individuales</h4>
-                </div>
-                <div class="box categories-category">
-                    <img
-                        src="./assets/img/products/1665694157348.jpg"
-                        alt=""
-                        srcset=""
-                    />
-                    <h4 class="category-title">Combos para Compartir</h4>
-                </div>
-                <div class="box categories-category">
-                    <img
-                        src="./assets/img/products/burguers-pollo-carne.jpg"
-                        alt=""
-                        srcset=""
-                    />
-                    <h4 class="category-title">
-                        Sandwiches de Pollo Frito y Hamburguesas de Carne Vacuna
-                    </h4>
-                </div>
-                <div class="box categories-category">
-                    <img
-                        src="./assets/img/products/combo-crocken-senior-duo.jpg"
-                        alt=""
-                        srcset=""
-                    />
-                    <h4 class="category-title">Picadas Crocken</h4>
-                </div>
-                <div class="box categories-category">
-                    <img src="./assets/img/products/veggie-wrap.jpg" alt="" srcset="" />
-                    <h4 class="category-title">Ensaladas y Wraps</h4>
-                </div>
-                <div class="box categories-category">
-                    <img
-                        src="./assets/img/products/papas-fritas-barbacoa.jpg"
-                        alt=""
-                        srcset=""
-                    />
-                    <h4 class="category-title">Acompañamientos</h4>
-                </div>
-                <div class="box categories-category">
-                    <img src="./assets/img/products/salsas.jpg" alt="" srcset="" />
-                    <h4 class="category-title">Salsas</h4>
-                </div>
-                <div class="box categories-category">
-                    <img src="./assets/img/products/pepsi.jpg" alt="" srcset="" />
-                    <h4 class="category-title">Bebidas</h4>
-                </div>
+            <div class="categories box">
+                <button class="category active" data-category="burguer">
+                    Burguers
+                </button>
+                <button class="category" data-category="combo-1">
+                    Combos Individuales
+                </button>
+                <button class="category" data-category="combo-2">
+                    Combos para Compartir
+                </button>
+                <button class="category" data-category="picadas">
+                    Picadas</span>
+                </button>
+                <button class="category" data-category="wraps">
+                    Ensaladas y Wraps
+                </button>
+                <button class="category" data-category="acompañamientos">
+                    Acompañamientos
+                </button>
+                <button class="category" data-category="bebidas">
+                    Bebidas
+                </button>
+            </div>
+            <div class="products-container box">
+                
             </div>
         </section>
         <section id="delivery">
@@ -356,28 +241,29 @@
                 </div>
             </div>
         </section>
-        <footer class="footer">
-            <img src="./assets/img/logo-crocken.png" alt="" srcset="">
-            <div class="copyright">
-                <span>Copyright © 2023 Crocken.</span> 
-            </div>
-            <div class="footer-icons">
-                <a href="https://www.instagram.com/crocken.crunch" target="_blank"
-            class="link">
-                <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a href="https://www.instagram.com/crocken.crunch" target="_blank"
-            class="link">
-                <i class="fa-brands fa-facebook"></i>
-            </a>
-            <a href="https://www.instagram.com/crocken.crunch" target="_blank"
-            class="link">
-                <i class="fa-brands fa-whatsapp"></i>
-            </a>
-            </div>
-        </footer>
+        
     </main>
-
+    <footer class="footer">
+        <img src="./assets/img/logo-crocken.png" alt="" srcset="">
+        <div class="copyright">
+            <span>Copyright © 2023 Crocken.</span> 
+        </div>
+        <div class="footer-icons">
+            <a href="https://www.instagram.com/crocken.crunch" target="_blank"
+        class="link">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://www.instagram.com/crocken.crunch" target="_blank"
+        class="link">
+            <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href="https://www.instagram.com/crocken.crunch" target="_blank"
+        class="link">
+            <i class="fa-brands fa-whatsapp"></i>
+        </a>
+        </div>
+    </footer>
+    <div class="add-modal"></div>
     <!-- SPLIDE JS -->
     <script src="
     https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
